--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "ownerNumber": ["6289517185039@s.whatsapp.net","6289517185039@s.whatsapp.net"],
-    "ownerName": "Call Me Zaa🐧",
+    "ownerNumber": ["+92 3445377203@s.whatsapp.net","6289517185039@s.whatsapp.net"],
+    "ownerName": "𝐃 𝐀 𝐍 𝐈 😈",
     "instagram" : "https://instagram.com/nicetry.zaa._",
     "botName": "Pizzaa🐧-Mdོ ",
     "footer": "api.zeeoneofc.xyz",
